# LightFieldCalibration

./: .gitignore  .gitmodules  CMakeLists.txt
Common/: SysUtil.hpp
DepthEstimation/: CMakeLists.txt  StereoRectify.cpp  SysUtil.hpp  camera2.json  cloud_registration.py  conver_to_point_cloud.py  feature_construction.m  gen_depth_map.m  main.cpp  manual_registration.py  match.tmp  mesh_depth.m  reconstruction.py  remove_outliers.m  rewrite_16bit_depthmap.m  run_epicflow.bat  save_matching_points.m
DepthEstimation/FastBilaterFilter/: BilateralGrid.py  BilateralSolver.py  test.py
DepthEstimation/FeatureMatch/: CMakeLists.txt  FeatureMatch.cpp  FeatureMatch.h  main.cpp
DepthEstimation/Interpolator/EpicFlow/: epicflow  io.c  io.h
DepthEstimation/MakeFragments/: CMakeLists.txt  Fragments.cpp  Fragments.h  OffScreenRender.cpp  OffScreenRender.h  main.cpp  mesh_texture.fragment.glsl  mesh_texture.vertex.glsl  mesh_vertexcolor_render.fragment.glsl  mesh_vertexcolor_render.vertex.glsl
DepthEstimation/MeshDepth/: demo.m  readme.txt
DepthEstimation/MeshDepth/RANSAC/: EstimateHomographyByRANSAC.m  RANSAC.m  SURF.m
DepthEstimation/MeshDepth/mesh/: AsSimilarAsPossibleWarping.m  Mesh.m  myWarp.m
DepthEstimation/PoseEstimator/: BundleAdjustment.cpp  BundleAdjustment.h  CMakeLists.txt  CameraParamEstimator.cpp  CameraParamEstimator.h  Compositor.cpp  Compositor.h  FeatureMatch.cpp  FeatureMatch.h  ReferenceStitcher.cpp  ReferenceStitcher.h  Warper.cpp  main.cpp  readme.md
DepthEstimation/RegistrateFragments/: BilateralSolver.hpp  Blender.cpp  Blender.h  CMakeLists.txt  OBJModelIO.cpp  OBJModelIO.h  Registration.cpp  Registration.h  Triangulate.cpp  Triangulate.h  Warper.cpp  Warper.h  main.cpp
DepthEstimation/SphereMeshGenerator/: CMakeLists.txt  GraphCutMask.cpp  GraphCutMask.h  OBJModelIO.cpp  OBJModelIO.h  SphereMesh.cpp  SphereMesh.h  main.cpp
DepthEstimation/util/: camera_param_loader.py
OnlineCalibration/: CMakeLists.txt  StereoCalibration.cpp  StereoCalibration.h  main.cpp
PatchMatch/: CMakeLists.txt  Common_Datastructure_Header.h  main.cpp  opticalFlow.cpp  opticalFlow.h  spmbp.cpp  spmbp.h
SingleCameraCalibration/: CMakeLists.txt  images.xml  main.cpp
StereoCalibration/: CMakeLists.txt  StereoCalibration.cpp  StereoCalibration.h  main.cpp
StereoCameraCalibration/: CMakeLists.txt  gen_xml.m  images.xml  main.cpp
VideoRectify/: CMakeLists.txt  main.cpp
